Fix bug in dataset import dialog
Before, when there was a client-side validation error,
we were showing a loading spinner and not showing
the error message.
[fixes #32620757]

--- a/app/assets/stylesheets/tabular_data/_dataset_import.scss
+++ b/app/assets/stylesheets/tabular_data/_dataset_import.scss
@@ -79,6 +79,7 @@ $image-width: 35px;
                 input[type=text] {
                     width: 192px;
                     display: inline-block;
+                    padding-right: 20px;
                 }
             }
 
